--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -63,6 +63,7 @@
   <h5><%= "Movimentações" %></h5>
   <%= f.check_box :min %>&nbsp;<%= f.label "Entrada de toalhas" %>&nbsp;
   <%= f.check_box :mout %>&nbsp;<%= f.label "Saida de toalhas" %>
+  <%= f.check_box :mlog %>&nbsp;<%= f.label "Log de atividades" %>
   
   <h5><%= "Financeiro" %></h5>
   <%= f.check_box :fpag %>&nbsp;<%= f.label "Contas á Pagar" %>
