--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -28,26 +28,23 @@
   <dd><%= @client.cnpj %></dd>
   <dt><strong><%= model_class.human_attribute_name('NF') %>:</strong></dt>
   <dd><%= @client.nf %></dd>
-  <dt><strong><%= model_class.human_attribute_name('Qnt estoque') %>:</strong></dt>
-  <dd><%= @client.qnt %></dd>
-  <dt><strong><%= model_class.human_attribute_name('R$ até 10 toalhas') %>:</strong></dt>
-  <dd><%= @client.val1 %></dd>
-  <dt><strong><%= model_class.human_attribute_name('R$ de 11 á 20 toalhas') %>:</strong></dt>
-  <dd><%= @client.val2 %></dd>
-  <dt><strong><%= model_class.human_attribute_name('R$ de 21 á 30 toalhas') %>:</strong></dt>
-  <dd><%= @client.val3 %></dd>
-  <dt><strong><%= model_class.human_attribute_name('R$ de 31 á 40 toalhas') %>:</strong></dt>
-  <dd><%= @client.val4 %></dd>
-  <dt><strong><%= model_class.human_attribute_name('R$ acima de 40 toalhas') %>:</strong></dt>
-  <dd><%= @client.val5 %></dd>
+  
 </dl>
 
 <%= link_to t('.back', :default => t("helpers.links.back")),
               clients_path, :class => 'btn btn-default'  %>
 <%= link_to t('.edit', :default => t("helpers.links.edit")),
               edit_client_path(@client), :class => 'btn btn-default' %>
+              <!--
 <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
               client_path(@client),
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
+-->
+
+<h2>Produtos</h2>
+<%= render "prod_clis/item" %>
+<%= render "prod_clis/form" %>
+<br />
+<br />
