--- a/app/views/user_notifier/send_signup_email.html.erb
+++ b/app/views/user_notifier/send_signup_email.html.erb
@@ -17,7 +17,7 @@
     <p>
       Para acessar o nosso aplicativo acesse o link abaixo informando o seu email e senha:<br />
       
-     <a href="http://crmweb.ddns.net:3000">Clique aqui para acessar o aplicativo</a>
+     <a href="http://dsoft.ddns.net:200">Clique aqui para acessar o aplicativo</a>
       
     </p>
     <p>Obrigado por juntar-se á nós!</p>
