--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -6,7 +6,7 @@
 <div class="form-group">
 		<div class="row">
 			  <div class="col-lg-3">
-			  <%= select_tag(:tipo_consulta, options_for_select([['Nome', 1], ['Cnpj', 2],['Email', 3]]), include_blank: 'Pesquisar por:', class: 'form-control')%>
+			  <%= select_tag(:tipo_consulta, options_for_select([['Nome', 1], ['CPF/Cnpj', 2],['Email', 3]]), include_blank: 'Pesquisar por:', class: 'form-control')%>
 			</div>
 			</div>
 		<div class="form-group">			  
