--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -24,7 +24,7 @@
   <dd><%= @client.cellphone %></dd>
   <dt><strong><%= model_class.human_attribute_name('email') %>:</strong></dt>
   <dd><%= @client.email %></dd>
-  <dt><strong><%= model_class.human_attribute_name('cnpj') %>:</strong></dt>
+  <dt><strong><%= model_class.human_attribute_name('cpf/cnpj') %>:</strong></dt>
   <dd><%= @client.cnpj %></dd>
   <dt><strong><%= model_class.human_attribute_name('NF') %>:</strong></dt>
   <dd><%= @client.nf %></dd>
