--- a/app/views/clients/report_client.html.erb
+++ b/app/views/clients/report_client.html.erb
@@ -31,7 +31,7 @@
       <th><%= model_class.human_attribute_name("responsável") %></th>
       <th><%= model_class.human_attribute_name("fone") %></th>
       <th><%= model_class.human_attribute_name("Celular") %></th>
-      <th><%= model_class.human_attribute_name("Cnpj") %></th>
+      <th><%= model_class.human_attribute_name("Cpf / Cnpj") %></th>
       <th><%= model_class.human_attribute_name("Email") %></th>
       
       </tr>
