--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -83,7 +83,7 @@
                 <ul class="dropdown-menu">
 
                 <% if current_user.min == true %>	
-                <li><%= link_to "Entrada de toalhas", '#' %></li>
+                <li><%= link_to "Entrada de toalhas", intowels_path %></li>
                 <% end %>
                 
                 <% if current_user.mout == true %>	
