--- a/app/views/intowels/index.html.erb
+++ b/app/views/intowels/index.html.erb
@@ -21,7 +21,9 @@
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name('cliente') %></th>
-      <th><%= model_class.human_attribute_name('valor') %></th>
+      <th><%= model_class.human_attribute_name('qnt toalhas') %></th>
+      <th><%= model_class.human_attribute_name('val unit R$') %></th>
+      <th><%= model_class.human_attribute_name('total R$') %></th>
       <th><%= model_class.human_attribute_name('status') %></th>
       <th><%= model_class.human_attribute_name('criado em') %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
@@ -31,6 +33,8 @@
     <% @intowels.each do |intowel| %>
       <tr>
         <td><%= link_to intowel.client.company, intowel_path(intowel) %></td>
+        <td><%= intowel.items.sum(:qnt) %></td>
+        <td><%= intowel.items.sum(:sale_value) %></td>
         <td><%= intowel.items.sum(:total_value) %></td>
         <td><%= intowel.status %></td>
         <td><%= intowel.created_at %></td>
