--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -61,8 +61,9 @@
   <%= f.check_box :cuser %>&nbsp;<%= f.label "Usuários" %><br />
     
   <h5><%= "Movimentações" %></h5>
-  <%= f.check_box :min %>&nbsp;<%= f.label "Entrada de toalhas" %>&nbsp;
-  <%= f.check_box :mout %>&nbsp;<%= f.label "Saida de toalhas" %>
+  <%= f.check_box :macerto %>&nbsp;<%= f.label "Acerto de clientes por periodo" %>&nbsp;
+  <%= f.check_box :min %>&nbsp;<%= f.label "Entrada de toalhas" %><br />
+  <%= f.check_box :mout %>&nbsp;<%= f.label "Saida de toalhas" %>&nbsp;
   <%= f.check_box :mlog %>&nbsp;<%= f.label "Log de atividades" %>
   
   <h5><%= "Financeiro" %></h5>
