--- a/app/views/intowels/reckoning.html.erb
+++ b/app/views/intowels/reckoning.html.erb
@@ -14,29 +14,18 @@
 </style>
 <% end %>
 
-<%= image_tag "logo_mini.png" %>
+<%= image_tag "header.png", :height=>"100%", :width=>"100%" %>
 <div class="container-fluid">
 
 <%- model_class = Client -%>
 
-  <h2>Relatório geral de Entrada de toalhas</h2>
+  <h2>Extrato de consumo</h2>
   
   Periodo: <%= @datainicial %> até <%=@datafinal %><br />
   <% if @client.present? %>
-  Cliente: <%= @client.name %>
+  Cliente: <%= @client.company %>
   <% end %>
-<%= form_tag(report_intowel_path, method: :get) do %>
-
-<%
-=begin %>
-<div class="form-group">			  
-		<div class="row">
-			  <div class="col-lg-2">
-		<%= select_tag(:tipo_consulta, options_for_select([['Orçamento', 'Orçamento'], ['Venda', 'Venda']]), include_blank: 'Pesquisar por:', class: 'form-control', id: 'printbtn')%>
-			</div>
-		</div>
- <%
-=end %> 
+<%= form_tag(reckoning_path, method: :get) do %>
 			
 <div class="form-group">			  
 		<div class="row">
@@ -61,13 +50,14 @@
 	</div>	
 		<br />	
 		<%= submit_tag "Consultar", class: 'btn btn-success', id: 'printbtn' %>
-<% end %>
+		<button type="button" id ="printbtn" class="btn btn-success", onclick ="window.print();return false;">Imprimir</button>
+		<% end %><p id="printbtn" />
+<%= button_to 'Efetuar baixa', acerto_path, method: :post, data: { confirm: "Você confirma o acerto do cliente informado? este procedimento é irreversivel!" }, class: 'btn btn-danger', id: 'printbtn' %>
 
-	<button type="button" id ="printbtn" class="btn btn-success", onclick ="window.print();return false;">Imprimir</button>
- 
+	    
 <hr />
 
-
+<% if @intowels.present? %>
 <table class="table table-striped">
   <thead>
     <tr>
@@ -96,5 +86,10 @@
     <% end %>
   </tbody>
 </table>
-Quantidade de toalhas: <b><%= @qnt_items %></b><br />
-Total geral R$: <b><%= @total_items %></b>
+<h4>Total geral de consumo: <b><%= @qnt_items %> toalhas</b></h4>
+<h4>Total geral: <b>R$<%= @total_items %></b></h4>
+<% else %>
+<h4 class="jumbotron">Não existem dados com base nos parametros informados.</h4>
+<% end %>
+<br />
+<br />
