--- a/app/views/outtowels/index.html.erb
+++ b/app/views/outtowels/index.html.erb
@@ -1,6 +1,6 @@
-<%- model_class = Intowel -%>
+<%- model_class = Outtowel -%>
 <div class="page-header">
-  <h1>Entrada de toalhas</h1>
+  <h1>Saida de toalhas</h1>
   <h5>Pesquisa por data de lançamento:</h5>
 <%= form_tag(intowels_path, method: :get) do %>
 
@@ -14,37 +14,33 @@
 		<br />	
 		<%= submit_tag "Consultar", class: 'btn btn-success' %>
 <% end %>
-	<%= link_to t('.new', :default => t("helpers.links.new")), new_intowel_path, :class => 'btn btn-primary' %>
+	<%= link_to t('.new', :default => t("helpers.links.new")), new_outtowel_path, :class => 'btn btn-primary' %>
 
 </div>
 <table class="table table-striped">
   <thead>
     <tr>
+      <th><%= model_class.human_attribute_name('id') %></th>
       <th><%= model_class.human_attribute_name('cliente') %></th>
-      <th><%= model_class.human_attribute_name('qnt toalhas') %></th>
-      <th><%= model_class.human_attribute_name('val unit R$') %></th>
-      <th><%= model_class.human_attribute_name('total R$') %></th>
       <th><%= model_class.human_attribute_name('status') %></th>
       <th><%= model_class.human_attribute_name('criado em') %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
-    <% @intowels.each do |intowel| %>
+    <% @outtowels.each do |outtowel| %>
       <tr>
-        <td><%= link_to intowel.client.company, intowel_path(intowel) %></td>
-        <td><%= intowel.items.sum(:qnt) %></td>
-        <td><%= intowel.items.sum(:sale_value) %></td>
-        <td><%= intowel.items.sum(:total_value) %></td>
-        <td><%= intowel.status %></td>
-        <td><%= intowel.created_at %></td>
+        <td><%= link_to outtowel.id, outtowel_path(outtowel) %></td>
+        <td><%= outtowel.client.company %></td>
+        <td><%= outtowel.status %></td>
+        <td><%= outtowel.created_at %></td>
         <td>
-          <% if intowel.status == 'ABERTA' %>
+        <% if outtowel.status == 'ABERTA' %>	
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_intowel_path(intowel), :class => 'btn btn-default btn-xs' %>
-          <% end %>
+                      edit_outtowel_path(outtowel), :class => 'btn btn-default btn-xs' %>
+        <% end %>              
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      intowel_path(intowel),
+                      outtowel_path(outtowel),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-xs btn-danger' %>
