--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -72,6 +72,7 @@
   
   <h5><%= "Relatórios" %></h5>
   <%= f.check_box :rcli %>&nbsp;<%= f.label "Clientes" %>
+  <%= f.check_box :rfecha %>&nbsp;<%= f.label "Fechamento" %>
   <%= f.check_box :rsuplier %>&nbsp;<%= f.label "Fornecedores" %><br />
   <%= f.check_box :rprod %>&nbsp;<%= f.label "Produtos" %>
   <%= f.check_box :rpag %>&nbsp;<%= f.label "Contas á Pagar" %><br />
